kubernetes-murmur.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-09-13T20:42:20Z"
    labels:
      app: murmur
    name: murmur
    namespace: default
    resourceVersion: "49827833"
    uid: 9732ea1e-1618-4bb3-b939-3c7050ec970e
  spec:
    clusterIP: 10.245.37.156
    clusterIPs:
    - 10.245.37.156
    ports:
    - name: main
      port: 443
      protocol: TCP
      targetPort: 64738
    selector:
      app: murmur
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "8"
    creationTimestamp: "2020-09-13T20:41:20Z"
    generation: 10
    labels:
      app: murmur
    name: murmur
    namespace: default
    resourceVersion: "49827689"
    uid: 3fc4f6a9-2759-4fed-b88b-1eecc8a5a357
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: murmur
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: murmur
      spec:
        containers:
        - image: registry.digitalocean.com/demo1/murmur:t1.1
          imagePullPolicy: IfNotPresent
          name: murmur
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/murmur/certs
            name: certs
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: certs
          secret:
            defaultMode: 420
            secretName: murmur-tls
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2021-05-10T14:49:24Z"
      lastUpdateTime: "2021-05-10T14:49:24Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2020-09-13T20:41:20Z"
      lastUpdateTime: "2021-05-10T14:49:24Z"
      message: ReplicaSet "murmur-559f7d6c59" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 10
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/secure-backends: "true"
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    creationTimestamp: "2020-09-13T20:58:50Z"
    generation: 5
    name: murmur
    namespace: default
    resourceVersion: "49825774"
    uid: 7771b8f3-4571-4e2a-b00b-56320af20a59
  spec:
    rules:
    - host: voice.kwiatko.xyz
      http:
        paths:
        - backend:
            service:
              name: murmur
              port:
                number: 443
          path: /
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - ip: 207.154.226.176
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
